--- a/_posts/2016-10-04-fasting.md
+++ b/_posts/2016-10-04-fasting.md
@@ -23,4 +23,6 @@ I'll come back with more.
 
 ------
 
+5:00pm My energy levels and focus have been quite good since lunch. I feel less clammy than I did around then. Starting to get the acetone breath that is familiar to me with the Ketogenic diet. I'm getting a bit bored with not having much work to do - and that boredom has had my mind wander to snacking a few times. Thankfully I can still squash that idea.
 
+Really, I'm quite surprised at how, erm, not-difficult this is. Hunger sucks, but it doesn't suck like some of the endurance bike rides and hikes I've done.
