--- a/_posts/2016-10-04-fasting.md
+++ b/_posts/2016-10-04-fasting.md
@@ -26,3 +26,13 @@ I'll come back with more.
 5:00pm My energy levels and focus have been quite good since lunch. I feel less clammy than I did around then. Starting to get the acetone breath that is familiar to me with the Ketogenic diet. I'm getting a bit bored with not having much work to do - and that boredom has had my mind wander to snacking a few times. Thankfully I can still squash that idea.
 
 Really, I'm quite surprised at how, erm, not-difficult this is. Hunger sucks, but it doesn't suck like some of the endurance bike rides and hikes I've done.
+
+------
+
+I made it! No problem. I was a bit bored and found myself pacing for food about an hour before my sweet release, but that was fine. I made some cube steak, steamed veggies, and a salad with ranch. Oh boy did it taste good!! There was a real enhancement to the flavor and enjoyment to eating, and wow did I want to eat all the things. Like a dog off the leash, my mind kept imagining all sorts of delicious foods and feeling completely free to have any of them. Though, I read that it may be overbearing to gourge myself after fasting, I was cautious to eat too much. That wasn't a problem, this was after-all about discipline. 
+
+Before I went to bed, my lasting craving for a chocolate frosting donut got too much, and I biked in the rain to go get one. Completely worth it.
+
+------
+
+In a few weeks I want to stretch this and try for 48 hours, and on a later attempt do 72.
